# Empty [workspace] isolates this SDK from the parent monorepo workspace
# so `cargo test` / `cargo build` work when the SDK is opened standalone
# or synced to its own git repo.
[workspace]

[package]
name = "tenzro-sdk"
version = "0.4.12"
edition = "2024"
description = "Tenzro Network SDK — wallets, identity, agents, inference, bridge, crypto, TEE, ZK proofs, custody, and settlement"
license = "Apache-2.0"
repository = "https://github.com/tenzro/tenzro-sdk-rust"
homepage = "https://tenzro.com"
documentation = "https://tenzro.com/docs/rust-sdk"
readme = "README.md"
keywords = ["blockchain", "ai", "agents", "mcp", "web3"]
categories = ["api-bindings", "cryptography", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
futures = "0.3"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
base64 = "0.22"
async-trait = "0.1"
getrandom = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

[dev-dependencies]
tracing-subscriber = "0.3"
tenzro-crypto = "0.1.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
serde_json = "1"
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "wallet_operations"
path = "examples/wallet_operations.rs"

[[example]]
name = "ai_inference"
path = "examples/ai_inference.rs"

[[example]]
name = "cortex_reasoning"
path = "examples/cortex_reasoning.rs"

[[example]]
name = "settlement"
path = "examples/settlement.rs"

[[example]]
name = "agents"
path = "examples/agents.rs"

[[example]]
name = "governance"
path = "examples/governance.rs"

[[example]]
name = "complete_example"
path = "examples/complete_example.rs"

[[example]]
name = "task_marketplace"
path = "examples/task_marketplace.rs"

[[example]]
name = "agent_marketplace"
path = "examples/agent_marketplace.rs"

[[example]]
name = "app_developer"
path = "examples/app_developer.rs"

[[example]]
name = "capital_intent"
path = "examples/capital_intent.rs"

[[example]]
name = "multi_party_workflow"
path = "examples/multi_party_workflow.rs"

[[example]]
name = "passkey_e2e_smoke"
path = "examples/passkey_e2e_smoke.rs"

[[example]]
name = "passkey_sign_smoke"
path = "examples/passkey_sign_smoke.rs"

[[example]]
name = "passkey_userop_smoke"
path = "examples/passkey_userop_smoke.rs"
